# qt-widgets-on-real-example

./: README.md  about.md  crop.md  fdl-1.3.md  frame-on-tape.md  frame.md  intro.md  launching.md  links.md  mainwindow-basics.md  plans.md  preface.md  reading.md  saving-of-removed-frames.md  tape.md  thanks.md  view.md  welcome.md  what-else.md
.reuse/: dep5
chapter01/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md  09.md  10.md  11.md  12.md  13.md  about.md  crop.md  frame-on-tape.md  frame.md  intro.md  launching.md  mainwindow-basics.md  plans.md  reading.md  saving-of-removed-frames.md  tape.md  view.md  what-else.md
chapter02/: 01.md  02.md  03.md  04.md  05.md  camera.md  capture.md  intro.md  surface.md  view.md
chapter03/: 01.md  02.md  impl.md  intro.md
chapter04/: 01.md  mistakes.md
chapter05/: 01.md  02.md  03.md  04.md  05.md  06.md  board.md  c++-qml.md  dialog.md  intro.md  mainwindow.md  start.md
chapter06/: 01.md
examples/qt6_qcamera/: CMakeLists.txt  LICENSE  README.md  frames.cpp  frames.hpp  main.cpp  main.qml
examples/qt6_qcamera/android/: AndroidManifest.xml
